--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <br><h1><b>รายงานการขาย</b></h1>
------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<hr width=100% size=5 color="black">
 <br>วันที่ <input type="text" name="dateTime" disabled>
 <br>ยอดขายรวม:<input type="text" name="total" disabled> ค่าธรรมเมนียม:<input type="text" name="Fee" disabled> ยอดขายรวมหลังหักค่าธรรมเนียม:<input type="text" name="TotlaPriceFee" disabled>
-
+<br>
+<br>
 <table style="width:100%" border="1">
 
   <tr>
