--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -7,9 +7,20 @@
 <body>
 <br><h1><b>รายงานการขาย</b></h1>
 <hr width=100% size=5 color="black">
-<br>วันที่ <input type="text" name="dateTime" disabled>
-<br>ยอดขายรวม:<input type="text" name="total" disabled> ค่าธรรมเมนียม:<input type="text" name="Fee" disabled> ยอดขายรวมหลังหักค่าธรรมเนียม:<input type="text" name="TotlaPriceFee" disabled>
+
+<table style="width:100%" align="center">
+<tr>
+<br>วันที่ : <input type="text" name="dateTime" disabled>
+</tr>
+<tr>
+    <td>ยอดขายรวม : <input type="text" name="total" disabled> </td>
+<td>ค่าธรรมเนียม : <input type="text" name="Fee" disabled> </td> 
+<td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" disabled> </td>
+</tr>
+</table>
+
 <br>
+
 <br>
 <table style="width:100%" border="1">
 
