--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -5,18 +5,21 @@
 <title>รายงานการขาย</title>
 </head>
 <body>
+<style>
+{background-color: powderblue;}
+</style>
 <br><h1><b>รายงานการขาย</b></h1>
 <hr width=100% size=5 color="black">
-
+<br>
 <table style="width:100%" align="center">
-<tr>
-<br>วันที่ : <input type="text" name="dateTime" disabled>
-</tr>
-<tr>
-    <td>ยอดขายรวม : <input type="text" name="total" disabled> </td>
-<td>ค่าธรรมเนียม : <input type="text" name="Fee" disabled> </td> 
-<td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" disabled> </td>
-</tr>
+    <tr>
+        วันที่ : <input type="text" name="dateTime" disabled>
+    </tr>
+    <tr>
+        <td>ยอดขายรวม : <input type="text" name="total" disabled> </td>
+        <td>ค่าธรรมเนียม : <input type="text" name="Fee" disabled> </td> 
+        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" disabled> </td>
+    </tr>
 </table>
 
 <br>
