--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@ li a:hover:not(.active) {
 <ul>
   <li><a class="active" href="#home">หน้าแรก</a></li>
   <li><a href="#news">เพิ่มสินค้า</a></li>
-  <li><a href="#contact">แสดงรายการขาย</a></li>
+  <li><a href="report.html">แสดงรายการขาย</a></li>
 </ul>
 
 <div style="margin-left:10%;padding:1px 16px;height:1000px;">
