--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -13,12 +13,12 @@
 <br>
 <table style="width:100%" align="center">
     <tr>
-        วันที่ : <input type="text" name="dateTime" disabled>
+        <td>วันที่ : <input type="text" name="dateTime" value="9 เมษายน พ.ศ. 2560" disabled></td>
     </tr>
     <tr>
-        <td>ยอดขายรวม : <input type="text" name="total" disabled> </td>
-        <td>ค่าธรรมเนียม : <input type="text" name="Fee" disabled> </td> 
-        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" disabled> </td>
+        <td>ยอดขายรวม : <input type="text" name="total" value = "" disabled> </td>
+        <td>ค่าธรรมเนียม : <input type="text" name="Fee" value = "" disabled> </td> 
+        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" value = "" disabled> </td>
     </tr>
 </table>
 
