add data in table

--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -38,16 +38,25 @@
     <th>Net Price</th>
   </tr>
   <tr>
-    <td></td>
-    <td></td> 
-    <td></td> 
-    <td></td> 
-    <td></td> 
-    <td></td> 
-    <td></td> 
-    <td></td> 
+    <td>ORD25600409_002</td>
+    <td>วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 11.10 น.</td> 
+    <td>Americano</td> 
+    <td>Hot</td> 
+    <td>1</td> 
+    <td>30</td> 
+    <td>- 0.50</td> 
+    <td>30.50</td> 
   </tr>
-  
+   <tr>
+    <td>ORD25600409_001</td>
+    <td>วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 10.30 น.</td> 
+    <td>Chocolateship</td> 
+    <td>Freppe</td> 
+    <td>1</td> 
+    <td>55</td> 
+    <td>- 0.50</td> 
+    <td>55.50</td> 
+  </tr>
 </table>
 </body>
 </html>
