--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -16,9 +16,9 @@
         <td>วันที่ : <input type="text" name="dateTime" value="9 เมษายน พ.ศ. 2560" disabled></td>
     </tr>
     <tr>
-        <td>ยอดขายรวม : <input type="text" name="total" value = "85.00 บาท" disabled> </td>
-        <td>ค่าธรรมเนียม : <input type="text" name="Fee" value = "-1.00 บาท" disabled> </td> 
-        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" value = "84.00 บาท" disabled> </td>
+        <td>ยอดขายรวม : <input type="text" name="total" value = "85.00" disabled> </td>
+        <td>ค่าธรรมเนียม : <input type="text" name="Fee" value = "-1.00" disabled> </td> 
+        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" value = "84.00" disabled> </td>
     </tr>
 </table>
 
@@ -43,9 +43,9 @@
     <td>Americano</td> 
     <td>Hot</td> 
     <td>1</td> 
-    <td>30</td> 
-    <td>- 0.50</td> 
-    <td>30.50</td> 
+    <td align="right">30</td> 
+    <td align="right">- 0.50</td> 
+    <td align="right">30.50</td> 
   </tr>
    <tr>
     <td>ORD25600409_001</td>
@@ -53,9 +53,9 @@
     <td>Chocolateship</td> 
     <td>Freppe</td> 
     <td>1</td> 
-    <td>55</td> 
-    <td>- 0.50</td> 
-    <td>55.50</td> 
+    <td align="right">55</td> 
+    <td align="right">- 0.50</td> 
+    <td align="right">55.50</td> 
   </tr>
 </table>
 </body>
