update table in report

--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -38,21 +38,21 @@
     <th>Net Price</th>
   </tr>
   <tr>
-    <td>ORD25600409_002</td>
-    <td>วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 11.10 น.</td> 
+    <td align="center">ORD25600409_002</td>
+    <td align="center">วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 11.10 น.</td> 
     <td>Americano</td> 
-    <td>Hot</td> 
-    <td>1</td> 
+    <td align="center">Hot</td> 
+    <td align="center">1</td> 
     <td align="right">30</td> 
     <td align="right">- 0.50</td> 
     <td align="right">30.50</td> 
   </tr>
    <tr>
-    <td>ORD25600409_001</td>
-    <td>วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 10.30 น.</td> 
+    <td align="center">ORD25600409_001</td>
+    <td align="center">วันอาทิตย์ ที่ 9 เมษายน พ.ศ. 2560 เวลา 10.30 น.</td> 
     <td>Chocolateship</td> 
-    <td>Freppe</td> 
-    <td>1</td> 
+    <td align="center">Freppe</td> 
+    <td align="center">1</td> 
     <td align="right">55</td> 
     <td align="right">- 0.50</td> 
     <td align="right">55.50</td> 
