--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -16,9 +16,9 @@
         <td>วันที่ : <input type="text" name="dateTime" value="9 เมษายน พ.ศ. 2560" disabled></td>
     </tr>
     <tr>
-        <td>ยอดขายรวม : <input type="text" name="total" value = "85.00" disabled> </td>
-        <td>ค่าธรรมเนียม : <input type="text" name="Fee" value = "-1.00" disabled> </td> 
-        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" value = "84.00" disabled> </td>
+        <td >ยอดขายรวม : <input type="text" name="total" value = "85.00" disabled> บาท</td>
+        <td>ค่าธรรมเนียม : <input type="text" name="Fee" value = "-1.00" disabled> บาท</td> 
+        <td>ยอดขายรวมหลังหักค่าธรรมเนียม : <input type="text" name="TotlaPriceFee" value = "84.00" disabled> บาท</td>
     </tr>
 </table>
 
